app-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-short-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      name: app-short
      labels:
        components: frontend
    spec:
      containers:
        - name: app-short
          image: antonlarichev/short-app
          resources:
            limits:
              memory: '228Mi'
              cpu: '500m'
          ports:
            - containerPort: 80
