pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-short
  labels:
    components: frontend
spec:
  containers:
    - name: app-short
      image: antonlarichev/short-app
      resources:
        limits:
          memory: '128Mi'
          cpu: '500m'
      ports:
        - containerPort: 80
