postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pg-clusterip
spec:
  type: ClusterIP
  selector:
    components: pg
  ports:
    - port: 5432
      protocol: TCP
